--- a/css/css3.css
+++ b/css/css3.css
@@ -107,8 +107,8 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 .footer {
 	width: 100%;
 	height: 97px;
-	background: #333;
-	position: absolute;
+	background: #121212;
+	position: relative;
 }
 
 .bot-link {
@@ -262,7 +262,7 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 
 .box{
   height:75px; 
-  background: #fff;
+  background: rgba(0,0,0,0.3);
   position: relative;
   display: block;
   width: 300px;
