--- a/css/css3.css
+++ b/css/css3.css
@@ -80,33 +80,35 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 }
 
 #go-top{
-	width: 50px;
-	height: 50px;
+	width: 40px;
+	height: 40px;
 	position: fixed;
-	right: 20px;
+	right: 30px;
 	bottom: 150px;
 }
 
 #go-top a{
-	width: 50px;
-	height: 50px;
+	width: 40px;
+	height: 40px;
 	position: relative;
 }
 
 #go-top span{
-	width: 50px;
-	height: 50px;
+	width: 40px;
+	height: 40px;
 	background: url(../img/gototop.png) no-repeat;
+	background-size: 40px;
 	display: block;
 }
 
 #go-top span:hover{
 	background: url(../img/gototop2.png) no-repeat;
+	background-size: 40px;
 }
 /*footer.css*/
 .footer {
 	width: 100%;
-	height: 97px;
+	height: 170px;
 	background: #121212;
 	position: relative;
 }
@@ -114,7 +116,7 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 .bot-link {
 	width: 960px;
 	margin: 0 auto;
-	height: 97px;
+	height: 170px;
 	position: relative;
 }
 
@@ -130,9 +132,11 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 	padding: 0 25px 0 0;
 }
 
-.footer span{
+.footer p{
 	font-size: 14px;
 	color: #fff;
+	line-height: 2;
+	letter-spacing: 2px;
 }
 
 .footer a {
