--- a/css/css3.css
+++ b/css/css3.css
@@ -203,6 +203,7 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
   width: 100%;
   position: relative;
   background: #ecede2;
+  display: inline-block;
 }
 
 .search-title{
@@ -213,8 +214,10 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 }
 
 .waterfall{
-  display: inline-block;
   width: 990px;
+  margin: 0 auto;
+  position: relative;
+  display: -webkit-box;
 }
 .img-list li{
   float: left; 
@@ -258,8 +261,8 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 }
 
 #b-img{
-  width: 630px;
-  height: 630px; 
+  width: 535px;
+  height: 340px; 
   display: block;
 }
 
@@ -946,9 +949,6 @@ src:url(../font/悦黑细体.otf?#iefix) format('embedded-opentype'), url(../fon
 
 
 @media screen and (min-width: 768px) and (max-width: 959px){
-	.BD{
-		max-width:630px;
-	}
 	.header-box{
 		width: 630px;
 	}
