--- a/css/css3.css
+++ b/css/css3.css
@@ -74,7 +74,6 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 }
 
 .intro{
-	height: 200px;
 	background: #dcddd3;
 	width: 100%;
 }
@@ -82,6 +81,7 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 .intro_infor{
 	width: 960px;
 	margin: 0 auto;
+	padding: 30px 0;
 }
 
 #go-top{
@@ -230,7 +230,7 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
   list-style: none; 
   height: 180px;
   width: 300px; 
-  margin: 0 35px 30px 0;
+  margin: 0 35px 50px 0;
 }
 
 .img-list li:last-child{
@@ -240,7 +240,7 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 #box_2{
     width: 395px;
 	height: 340px;
-	margin: 0 0 30px 0;
+	margin: 0 0 50px 0;
 }
 
 .img-list li:hover{
