--- a/css/css3.css
+++ b/css/css3.css
@@ -90,6 +90,7 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 	position: fixed;
 	right: 30px;
 	bottom: 150px;
+	z-index: 999;
 }
 
 #go-top a{
@@ -101,13 +102,13 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 #go-top span{
 	width: 40px;
 	height: 40px;
-	background: url(img/gototop.png) no-repeat;
+	background: url(../img/gototop.png) no-repeat;
 	background-size: 40px;
 	display: block;
 }
 
 #go-top span:hover{
-	background: url(img/gototop2.png) no-repeat;
+	background: url(../img/gototop2.png) no-repeat;
 	background-size: 40px;
 }
 /*footer.css*/
