--- a/css/css3.css
+++ b/css/css3.css
@@ -210,14 +210,13 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
   position: relative;
   background: #ecede2;
   display: inline-block;
-  padding-top: 40px;
+  padding: 40px 0;
 }
 
-.search-title{
-  font-size: 24px;
-  color: #333;
-  padding: 35px 0 16px 0;
-  display: block;
+.show_btn{
+	width: 960px;
+	margin: 0 auto;
+	text-align: right;
 }
 
 .waterfall{
@@ -351,28 +350,6 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 .head-img-name:hover{
 	color: #999;
 }
-
-.zan{
-  background: url(../img/zan.png)no-repeat;
-  background-position: 0px 15px;
-  height: 42px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 35px;
-  text-align: right;
-  display: inline-block;
-}
-
-.zan span{
-  position: relative;
-  top: 14px;
-}
-
-.icon-1-click{background: url(../img/zaned.png) no-repeat; background-position: 0px 1px}
-
-
-.infscr-loading{width: 100%;margin: 0 auto; text-align: center; padding: 30px 0;}
 
 
 /*inset.css*/
