--- a/css/css3.css
+++ b/css/css3.css
@@ -100,7 +100,17 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 }
 
 .ati{
-	margin: 2rem 0;
+	margin: 0.75rem 0 2rem 0;
+}
+
+.main_t{
+	font-size: 1.125rem;
+}
+.ati p{
+	font-size:0.75rem;
+	padding: 0.3125rem 0 0 0;
+	color: rgba(0,0,0,0.7);
+	width: 60%;
 }
 
 .main_t_r{
@@ -268,7 +278,7 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 
 /*index.css*/
 .hidden{display: none;}
-.BD{margin:0 auto; width: 100%; padding: 30px;}
+.BD{margin: 0;width: 100%; padding: 30px;}
 .Bg{background: #ecede2;}
 .container{
   padding: 40px 0;
