--- a/css/css3.css
+++ b/css/css3.css
@@ -32,9 +32,14 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 
 .top-img {
 	position: relative;
-	top: 27px;
-	width: 105px;
+	top: 18px;
+	width: 60px;
+	height: 60px;
 	display: inline-block;
+}
+.top-img img{
+	width: 60px;
+	height: auto;
 }
 
 .menu {
