--- a/css/css3.css
+++ b/css/css3.css
@@ -1165,8 +1165,8 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
 
     .img-list li{
     	width: 100%;
-    	height: 100%;
-    	float: none;
+    	height: auto;
+    	margin: 0 0 30px 0;
     }
     #img-box-b{
     	width: 100%;
