--- a/css/css3.css
+++ b/css/css3.css
@@ -1281,5 +1281,6 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
 	}
 	#go-top{
 		right: 15px;
+		bottom: 123px;
 	}
 }
