--- a/css/css3.css
+++ b/css/css3.css
@@ -710,49 +710,6 @@ body{font-size: 62.5%; overflow-y: scroll;background: #2a2a2a;height: 100%;font:
 	top: 10px;
 }
 
-.wb a{
-	width: 16px;
-	height: 16px;
-	display: block;
-	background: url(../img/blog.png) no-repeat;
-	background-position: 0px 0px;
-}
-
-.wb a:hover{
-	background: url(../img/blog2.png) no-repeat;
-	background-position: 0px 0px;
-}
-
-.tb{
-	width: 16px;
-	height: 16px;
-	position: absolute;
-	right: 16px;
-	top: 10px;
-}
-
-.tb a{
-	width: 16px;
-	height: 16px;
-	display: block;
-	background: url(../img/blog.png) no-repeat;
-	background-position: -29px 0px;
-}
-
-.tb a:hover{
-	background: url(../img/blog2.png) no-repeat;
-	background-position: -29px 0px;
-}
-
-.icon-1{background: url(../img/zan.png) no-repeat; background-position: 28px 1px;}
-.icon-2{background: url(../img/pinglun.png) no-repeat; background-position: 28px 0px;}
-.icon-3{background: url(../img/share.png) no-repeat; background-position: 32px 0px;}
-.icon-1-click{background: url(../img/zaned.png) no-repeat;background-position: 28px 1px;}
-
-.icon-1:hover{background: url(../img/zaned.png) no-repeat; background-position: 28px 1px;}
-.icon-2:hover{background: url(../img/liuyan.png) no-repeat; background-position: 28px 0px;}
-.icon-3:hover{background: url(../img/share2.png) no-repeat; background-position: 32px 0px;}
-.icon-1-click:hover{background: url(../img/zaned.png) no-repeat;background-position: 28px 1px;}
 
 .send{
 	width: 100%;
@@ -879,8 +836,7 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
 }
 
 .st{
-	width: 960px;
-	margin: 0 auto;
+	width: 100%;
 }
 
 .st p,.st span{
@@ -890,10 +846,14 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
 
 .store_w{
 	background: #ecede2;
+	width: 100%;
+	height: 400px;
 }
 
 .store_g{
 	background: #f3f3f3;
+	width: 100%;
+	height: 400px;
 }
 
 
