--- a/css/css3.css
+++ b/css/css3.css
@@ -845,7 +845,7 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
 }
 
 .store_w{
-	background: #ecede2;
+	background: #f5f5f5;
 	width: 100%;
 	height: 400px;
 }
@@ -856,7 +856,26 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
 	height: 400px;
 }
 
+.store_in{
+	width: 960px;
+	margin: 0 auto;
+	height: 100%;
+}
 
+.store_in_l{
+	width: 50%;
+	display: inline-block;
+}
+.store_in_r{
+	width: 50%;
+	display: inline-block;
+}
+.in_l_img{
+	background: url(../img/11.png) no-repeat 50% 50%;
+	height: 100%;
+	display: block;
+	background-size: contain;
+}
 
 
 @media screen and (min-width: 768px) and (max-width: 959px){
