--- a/css/css3.css
+++ b/css/css3.css
@@ -246,19 +246,15 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%;font:14p
 	line-height: 2;
 }
 .lik span{
-	width: 22px;
-	height: 22px;
 	display: inline-block;
-	float: left;
-	margin-right: 10px;
 }
 
 .email{
-	background: url(../img/email.png) no-repeat 50% 50%;
+	background: url(../img/email.png) no-repeat;
 	background-size: contain;
 }
 .phone{
-	background: url(../img/phone.png) no-repeat 50% 50%;
+	background: url(../img/phone.png) no-repeat;
     background-size: contain;
 }
 
@@ -279,6 +275,7 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%;font:14p
 	font-size: 14px;
 	line-height: 22px;
 	display: block;
+	padding-left: 30px;
 }
 
 .bot-ex p{
@@ -764,21 +761,6 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
 	.footer{
 		height: 130px;
 	}
-	.lik{
-		line-height: 28px;
-    }
-	.bot-link{
-		width: 630px;
-	}
-	.lik_logo{
-		right: -60px;
-	}
-	.bot-ex{
-		text-align: center;
-	}
-	.n_b{
-		display: none;
-	}
 }
 
 
@@ -805,15 +787,6 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
 	.img-list li{
 		
 		margin: 0 0 30px 0;
-	}
-	#b_box{
-		
-	}
-	.box{
-		
-	}
-	#b-img{
-		
 	}
 	.img-box img{
 		
@@ -843,26 +816,8 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
 	.search-box{
 		display: none;
 	}
-	.n_b{
-		display: none;
-	}
 	.footer{
 		height: 130px;
-	}
-	.lik{
-		line-height: 28px;
-    }
-	.bot-link{
-		width: 480px;
-	}
-	.lik_logo{
-		right: 0px;
-	}
-	.bot-ex{
-		text-align: center;
-	}
-	.bot-ex p{
-		font-size: 12px;
 	}
 }
 
